<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBarLogin"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="0dp"
            android:elevation="4dp"
            android:backgroundTint="?attr/colorTheme"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:navigationIcon="@drawable/ic_round_close_24"
            app:navigationIconTint="?attr/colorTextTheme" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="App Barber"
            android:textSize="29sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLogin"
            app:layout_constraintVertical_bias="0.17000002" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/customEditTextOutline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.100000024"
            app:placeholderText="@string/text_placeholder_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:tag="email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/customEditTextOutline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/text_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
            app:layout_constraintVertical_bias="0.0"
            app:passwordToggleEnabled="true"
            app:placeholderText="@string/text_placeholder_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:tag="password" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:text="@string/text_forgot_password"
            android:textColor="@color/blue_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="15dp"
            android:enabled="false"
            android:paddingVertical="10dp"
            android:text="@string/text_log_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="Google"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="Facebook"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/materialButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/materialButton2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_not_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"
            android:textColor="?attr/colorTextTheme"
            android:text="@string/text_not_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/materialButton2"
            app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>